# goobert

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  goobert.ini.example  goobert.pro  goobert.py  start.sh
dashboard/: app.py  run.sh
dashboard/templates/: index.html
src/: app.rs  config.cpp  config.h  config.rs  configpanel.cpp  configpanel.h  controlpanel.cpp  controlpanel.h  file_scanner.rs  filescanner.cpp  filescanner.h  grid_cell.rs  gridcell.cpp  gridcell.h  keymap.cpp  keymap.h  keymap.rs  main.cpp  main.rs  mainwindow.cpp  mainwindow.h  monitorwidget.cpp  monitorwidget.h  mpv_player.rs  mpvcontroller.cpp  mpvcontroller.h  mpvwidget.cpp  mpvwidget.h  playlistpicker.cpp  playlistpicker.h  playlistwidget.cpp  playlistwidget.h  settingsdialog.cpp  settingsdialog.h  sidepanel.cpp  sidepanel.h  statsmanager.cpp  statsmanager.h  theme.h  toolbar.cpp  (+2 more)
src/ui/: control_panel.rs  mod.rs
